--- a/src/content/LandingPage/_landing-page.scss
+++ b/src/content/LandingPage/_landing-page.scss
@@ -50,9 +50,7 @@
 }
 
 .landing-page__r3 {
-	padding-top: $spacing-09;
-	padding-bottom: $spacing-09;
-	padding-left: $spacing-06;
+	padding: $spacing-09 $spacing-06;
 	@include landing-page-background;
 }
 
@@ -66,7 +64,7 @@
 	margin-left: -20px;
 	margin-right: -20px;
 
-	@include breakpoint-down(md) {
+	@include breakpoint-down(lg) {
 		margin-left: 0;
 		margin-right: 0;
 	}
